# open-ag-ui-canvas

./: README.md
agent/: README.md  main.py  planner_crew.py  pyproject.toml  researchState.py  research_langgraph.py
doc/: architecture.md
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/app/langgraph/: layout.tsx  page.tsx
frontend/app/mastra/: layout.tsx  page.tsx
frontend/components/: agent-selector.tsx  app-layout.tsx  app-sidebar.tsx  progress.tsx  workspace-toolbar.tsx  workspace.tsx
frontend/components/workspaces/: haiku-workspace.tsx  planner-workspace.tsx  researcher-workspace.tsx
frontend/lib/: agent-provider.tsx  prompts.ts
frontend/src/mastra/: index.ts
frontend/src/mastra/agents/: index.ts
frontend/src/mastra/tools/: index.ts
